2012-05-03  Philippe Roussel  <p.o.roussel@free.fr>

	* Bundles/AO/*
	New output bundle base on libao. 

	* GNUmakefile
	Add AO bundle to the build, unless disable-ao=yes if used.

2012-05-03 Riccardo Mottola for Yavor Doganov

	* GNUmakefile
	* GeneralPreference.m
	* Bundles/ALSA/ALSA.h
	* Bundles/ALSA/ALSA.m
	* Bundles/ALSA/GNUmakefile
	* Bundles/ALSA/GNUmakefile.preamble
	ALSA backend fron Yavor with slight modifications

2012-05-02 Riccardo Mottola <rm@gnu.org>

	* GNUmakefile.preamble
	* Bundles/ASFTags/GNUmakefile
	* Bundles/ASFTags/GNUmakefile.preamble
	* Bundles/FLAC/GNUmakefile
	* Bundles/FLAC/GNUmakefile.preamble
	* Bundles/FLACTags/GNUmakefile
	* Bundles/FLACTags/GNUmakefile.preamble
	* Bundles/ID3Tag/GNUmakefile
	* Bundles/ID3Tag/GNUmakefile.preamble
	* Bundles/MP3/GNUmakefile.preamble
	* Bundles/OSS/GNUmakefile
	* Bundles/OSS/GNUmakefile.preamble
	* Bundles/Taglib/GNUmakefile
	* Bundles/Taglib/GNUmakefile.preamble
	* Bundles/Timidity/GNUmakefile
	* Bundles/Timidity/GNUmakefile.preamble
	* Bundles/VorbisTags/GNUmakefile
	* Bundles/VorbisTags/GNUmakefile.preamble
	* Bundles/WaveOut/GNUmakefile.preamble
	* Bundles/WindowsMedia/GNUmakefile
	* Bundles/WindowsMedia/GNUmakefile.preamble:
	Fix linking flags for Windows

2012-05-02  Yavor Doganov  <yavor@gnu.org> (originally 2009-04-09)

	* Frameworks/Cynthiune/GNUmakefile
	(Cynthiune_LIBRARIES_DEPEND_UPON): Add $(OBJC_LIBS).
	* Bundles/ID3Tag/GNUmakefile.preamble (ADDITIONAL_LDFLAGS): Rename
	as...
	(BUNDLE_LIBS): ...which is the proper variable.
	* Bundles/AudioFile/GNUmakefile.preamble (ADDITIONAL_LDFLAGS)
	(BUNDLE_LIBS): Likewise.
	* Bundles/FLACTags/GNUmakefile.preamble (ADDITIONAL_LDFLAGS)
	(BUNDLE_LIBS): Likewise.
	* Bundles/FLAC/GNUmakefile.preamble (ADDITIONAL_LDFLAGS)
	(BUNDLE_LIBS): Likewise.
	* Bundles/Musepack/GNUmakefile.preamble (ADDITIONAL_LDFLAGS)
	(BUNDLE_LIBS): Likewise.
	* Bundles/Esound/GNUmakefile.preamble (ADDITIONAL_LDFLAGS)
	(BUNDLE_LIBS): Likewise.